# xybrid

./: AGENTS.md  Cargo.toml  README.ja-JP.md  README.md  README.zh-CN.md  install.ps1  install.sh
.github/workflows/: ci.yml  discord-notify.yml  release-notify.yml  release.yml  welcome.yml
bindings/apple/Sources/Xybrid/: xybrid_uniffi.swift
bindings/flutter/lib/src/: result.dart  xybrid.dart
bindings/flutter/rust/src/: frb_generated.rs
crates/xybrid/: Cargo.toml  README.md
crates/xybrid-core/: Cargo.toml  README.md  build.rs
crates/xybrid-core/benches/: inference_backends.rs  routing_feedback.rs
crates/xybrid-core/src/: event_bus.rs  features.rs  orchestrator.rs
crates/xybrid-core/src/audio/: format.rs
crates/xybrid-core/src/cloud/: client.rs  mod.rs
crates/xybrid-core/src/device/: platform_state.rs
crates/xybrid-core/src/execution/: executor.rs  session_factory.rs
crates/xybrid-core/src/orchestrator/: routing_engine.rs
crates/xybrid-core/src/pipeline/: resolver.rs
crates/xybrid-core/tests/: llm_context_integration.rs
crates/xybrid-sdk/: Cargo.toml
crates/xybrid-sdk/src/: lib.rs  model.rs  registry_client.rs  run_options.rs  telemetry.rs
crates/xybrid-sdk/tests/: telemetry_integration.rs
crates/xybrid-uniffi/src/: lib.rs
crates/xybrid/src/: lib.rs
docs/sdk/: API_REFERENCE.md  api-surface.yaml  telemetry.md
docs/telemetry/: registry.md
examples/ios/XybridExample/: ContentView.swift
examples/ios/XybridExample.xcodeproj/: project.pbxproj
macros/: Cargo.toml
tools/scripts/: api-contract-check.sh
(+39 files in other folders)
