[package]
name = "xybrid-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Procedural macros for the xybrid SDK (e.g. #[hybrid::route])."

[lib]
proc-macro = true
name = "xybrid_macros"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

